generator/parser/RulesParser.py
# Generated from Rules.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RulesParser ( Parser ):

    grammarFileName = "Rules.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'{'", "'}'", "'name'", "'name_adj'", 
                     "'tags'", "'conditions'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IDENTIFIER", "STRING", "NUMBER", "WS", "COMMENT" ]

    RULE_root = 0
    RULE_ruleObject = 1
    RULE_nameBlock = 2
    RULE_nameAdjBlock = 3
    RULE_tagsBlock = 4
    RULE_conditionsBlock = 5
    RULE_expr = 6

    ruleNames =  [ "root", "ruleObject", "nameBlock", "nameAdjBlock", "tagsBlock", 
                   "conditionsBlock", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    IDENTIFIER=8
    STRING=9
    NUMBER=10
    WS=11
    COMMENT=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RulesParser.EOF, 0)

        def ruleObject(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.RuleObjectContext)
            else:
                return self.getTypedRuleContext(RulesParser.RuleObjectContext,i)


        def getRuleIndex(self):
            return RulesParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = RulesParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.ruleObject()
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8):
                    break

            self.state = 19
            self.match(RulesParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(RulesParser.IDENTIFIER, 0)

        def nameBlock(self):
            return self.getTypedRuleContext(RulesParser.NameBlockContext,0)


        def nameAdjBlock(self):
            return self.getTypedRuleContext(RulesParser.NameAdjBlockContext,0)


        def tagsBlock(self):
            return self.getTypedRuleContext(RulesParser.TagsBlockContext,0)


        def conditionsBlock(self):
            return self.getTypedRuleContext(RulesParser.ConditionsBlockContext,0)


        def getRuleIndex(self):
            return RulesParser.RULE_ruleObject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleObject" ):
                listener.enterRuleObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleObject" ):
                listener.exitRuleObject(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleObject" ):
                return visitor.visitRuleObject(self)
            else:
                return visitor.visitChildren(self)




    def ruleObject(self):

        localctx = RulesParser.RuleObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ruleObject)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(RulesParser.IDENTIFIER)
            self.state = 22
            self.match(RulesParser.T__0)
            self.state = 23
            self.match(RulesParser.T__1)
            self.state = 24
            self.nameBlock()
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 25
                self.nameAdjBlock()


            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 28
                self.tagsBlock()


            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 31
                self.conditionsBlock()


            self.state = 34
            self.match(RulesParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def STRING(self):
            return self.getToken(RulesParser.STRING, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_nameBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameBlock" ):
                listener.enterNameBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameBlock" ):
                listener.exitNameBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameBlock" ):
                return visitor.visitNameBlock(self)
            else:
                return visitor.visitChildren(self)




    def nameBlock(self):

        localctx = RulesParser.NameBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nameBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(RulesParser.T__3)
            self.state = 37
            self.match(RulesParser.T__0)
            self.state = 38
            localctx.name = self.match(RulesParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameAdjBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name_adj = None # Token

        def STRING(self):
            return self.getToken(RulesParser.STRING, 0)

        def getRuleIndex(self):
            return RulesParser.RULE_nameAdjBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameAdjBlock" ):
                listener.enterNameAdjBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameAdjBlock" ):
                listener.exitNameAdjBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameAdjBlock" ):
                return visitor.visitNameAdjBlock(self)
            else:
                return visitor.visitChildren(self)




    def nameAdjBlock(self):

        localctx = RulesParser.NameAdjBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_nameAdjBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(RulesParser.T__4)
            self.state = 41
            self.match(RulesParser.T__0)
            self.state = 42
            localctx.name_adj = self.match(RulesParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagsBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.tag = None # Token

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.IDENTIFIER)
            else:
                return self.getToken(RulesParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return RulesParser.RULE_tagsBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTagsBlock" ):
                listener.enterTagsBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTagsBlock" ):
                listener.exitTagsBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTagsBlock" ):
                return visitor.visitTagsBlock(self)
            else:
                return visitor.visitChildren(self)




    def tagsBlock(self):

        localctx = RulesParser.TagsBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tagsBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(RulesParser.T__5)
            self.state = 45
            self.match(RulesParser.T__0)
            self.state = 46
            self.match(RulesParser.T__1)
            self.state = 48 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                localctx.tag = self.match(RulesParser.IDENTIFIER)
                self.state = 50 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8):
                    break

            self.state = 52
            self.match(RulesParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionsBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # ExprContext

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.ExprContext)
            else:
                return self.getTypedRuleContext(RulesParser.ExprContext,i)


        def getRuleIndex(self):
            return RulesParser.RULE_conditionsBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionsBlock" ):
                listener.enterConditionsBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionsBlock" ):
                listener.exitConditionsBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionsBlock" ):
                return visitor.visitConditionsBlock(self)
            else:
                return visitor.visitChildren(self)




    def conditionsBlock(self):

        localctx = RulesParser.ConditionsBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_conditionsBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(RulesParser.T__6)
            self.state = 55
            self.match(RulesParser.T__0)
            self.state = 56
            self.match(RulesParser.T__1)
            self.state = 58 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 57
                localctx.condition = self.expr()
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==8):
                    break

            self.state = 62
            self.match(RulesParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.identifier = None # Token
            self.value = None # Token

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(RulesParser.IDENTIFIER)
            else:
                return self.getToken(RulesParser.IDENTIFIER, i)

        def STRING(self):
            return self.getToken(RulesParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(RulesParser.NUMBER, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RulesParser.ExprContext)
            else:
                return self.getTypedRuleContext(RulesParser.ExprContext,i)


        def getRuleIndex(self):
            return RulesParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = RulesParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            localctx.identifier = self.match(RulesParser.IDENTIFIER)
            self.state = 65
            self.match(RulesParser.T__0)
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.state = 66
                localctx.value = self.match(RulesParser.T__1)
                self.state = 68 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 67
                    self.expr()
                    self.state = 70 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==8):
                        break

                self.state = 72
                self.match(RulesParser.T__2)
                pass
            elif token in [8]:
                self.state = 74
                self.match(RulesParser.IDENTIFIER)
                pass
            elif token in [9]:
                self.state = 75
                self.match(RulesParser.STRING)
                pass
            elif token in [10]:
                self.state = 76
                self.match(RulesParser.NUMBER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





